syntax = "proto3";

package inspec.proto;

message TestResult {
  string status = 1;
  string code_desc = 2;
  float run_time = 3;
  string start_time = 4;
  string resource = 5;
  string message = 20;
  string skip_message = 21;
  string exception = 22;
  repeated string backtrace = 23;
}

message ControlResults {
  string id = 1;
  repeated TestResult results = 2;
  string checksum = 3;
}

message ProfileResults {
  string id = 1;
  string name = 2;
  string version = 3;
  string sha256 = 4;
  repeated ControlResults controls = 5;
  string skip_message = 6;
}

message Results {
  repeated ProfileResults profiles = 1;
}